--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Sunil Syal",
   "dependencies": {
+    "apiai": "^4.0.3",
     "body-parser": "^1.15.0",
     "express": "^4.13.4"
   }
